--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "spacemfers",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.mjs"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "pg": "^8.12.0"
   }
 }
