tidy up, make test script, add prettier config

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "tsx src/index.ts"
+    "start": "tsx src/index.ts",
+    "test": "tsx src/test.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
