--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   ],
   "scripts": {
     "start": "tsx ./src/index.ts",
+    "dev": "tsx --watch ./src/index.ts",
     "test": "tsx ./src/test.ts",
     "client": "npm run dev --workspace=client"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "pg": "^8.12.0",
     "tsx": "^4.19.0"
   },
