--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tsx": "^4.19.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^22.5.4",
     "@types/pg": "^8.11.8",
     "typescript": "^5.6.2"
