remove pgadmin, add assets dir

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-POSTGRES_USER=yourUser
-POSTGRES_PW=changeit
+POSTGRES_USER=admin
+POSTGRES_PW=password
 POSTGRES_DB=postgres
-PGADMIN_MAIL=your@email.com
-PGADMIN_PW=changeit
