rework tables, fix stuff, create celestial in sandbox

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "start": "tsx ./src/index.ts",
     "dev": "tsx --watch ./src/index.ts",
-    "test": "tsx ./src/test.ts",
-    "client": "npm run dev --workspace=client"
+    "client": "npm run dev --workspace=client",
+    "sandbox": "tsx ./src/sandbox.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
