--- a/compose.yaml
+++ b/compose.yaml
@@ -6,6 +6,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PW}
       - POSTGRES_DB=${POSTGRES_DB}
+      - TZ=UTC  # set the container's timezone to UTC
     ports:
       - "5432:5432"
     volumes:
