--- a/package.json
+++ b/package.json
@@ -3,26 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "workspaces": [
-    "./client"
+    "client",
+    "server"
   ],
   "scripts": {
-    "start": "tsx ./src/index.ts",
-    "dev": "tsx --watch ./src/index.ts",
-    "client": "npm run dev --workspace=client",
-    "sandbox": "tsx ./src/sandbox.ts"
-  },
-  "dependencies": {
-    "@types/express": "^5.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "pg": "^8.13.1",
-    "tsx": "^4.19.2"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/node": "^22.9.0",
-    "@types/pg": "^8.11.10",
-    "typescript": "^5.6.3"
+    "db:up": "npm run db:up --workspace=server",
+    "db:down": "npm run db:down --workspace=server",
+    "server": "npm run dev --workspace=server",
+    "client": "npm run dev --workspace=client"
   }
 }
